--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#f44336</color>
+    <color name="colorPrimaryDark">#d32f2f</color>
+    <color name="colorAccent">#009688</color>
+    
+    <color name="colorPrimaryText">#212121</color>
+    <color name="colorPrimaryLight">#FFCDD2</color>
+    <color name="colorSecondaryText">#757575</color>
+    <color name="colorDevider">#BDBDBD</color>
+    <color name="colorTextWhite">#FFFFFF</color>
 </resources>
