--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -15,13 +15,26 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:orientation="vertical"
         android:layout_weight="1">
-        <android.support.v4.view.ViewPager
-            android:id="@+id/vp_home_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark"></android.support.v4.view.ViewPager>
+            <ImageView
+                android:id="@+id/iv_home_image"
+                android:layout_width="match_parent"
+                android:layout_height="225dp"
+                android:background="@color/colorPrimaryDark"/>
+            <TextView
+                android:id="@+id/tv_header_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorSecondaryText"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="@string/movie_title"
+                android:textColor="@color/colorTextWhite"
+                android:textSize="16sp"
+                android:textStyle="bold" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
