add header images

--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -12,16 +12,10 @@
     tools:context="com.agung.android.moviedb.activity.MainActivity"
     tools:showIn="@layout/app_bar_layout_home">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:layout_weight="1">
             <ImageView
                 android:id="@+id/iv_home_image"
                 android:layout_width="match_parent"
-                android:layout_height="225dp"
-                android:background="@color/colorPrimaryDark"/>
+                android:layout_height="200dp"/>
             <TextView
                 android:id="@+id/tv_header_title"
                 android:layout_width="match_parent"
@@ -33,14 +27,6 @@
                 android:textColor="@color/colorTextWhite"
                 android:textSize="16sp"
                 android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_margin="@dimen/marginMedium"
-        android:orientation="vertical">
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -49,6 +35,4 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         </ScrollView>
-
-    </LinearLayout>
 </LinearLayout>
