--- a/app/src/main/res/layout/activity_laucher.xml
+++ b/app/src/main/res/layout/activity_laucher.xml
@@ -24,13 +24,26 @@
 
     </RelativeLayout>
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingBottom="36dp"
-        android:text="My Movie List\nV1.0"
-        android:textColor="#ffff" />
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textColor="#ffff"
+            android:textStyle="bold"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingBottom="36dp"
+            android:text="V1.0"
+            android:textColor="#ffff" />
+    </LinearLayout>
+
 
 
 </LinearLayout>
