--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -12,12 +12,6 @@
     tools:context="com.agung.android.moviedb.activity.MainActivity"
     tools:showIn="@layout/app_bar_layout_home">
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical" />
-
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/detail_movie_refresh"
         android:layout_width="match_parent"
@@ -27,40 +21,68 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ScrollView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:id="@+id/ll_home"
+                    android:id="@+id/ll_error"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:visibility="gone">
 
                     <ImageView
-                        android:id="@+id/iv_home_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp" />
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_error_outline_black_24dp" />
 
                     <TextView
-                        android:id="@+id/tv_header_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorSecondaryText"
                         android:gravity="center"
-                        android:padding="5dp"
-                        android:text="@string/movie_title"
-                        android:textColor="@color/colorTextWhite"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/rv_home"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:text="Pastikan anda terkoneksi dengan jaringan!!!"
+                        android:textColor="@color/colorTextWhite" />
                 </LinearLayout>
-            </ScrollView>
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="none">
+
+                    <LinearLayout
+                        android:id="@+id/ll_home"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/iv_home_image"
+                            android:layout_width="match_parent"
+                            android:layout_height="200dp" />
+
+                        <TextView
+                            android:id="@+id/tv_header_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/colorSecondaryText"
+                            android:gravity="center"
+                            android:padding="5dp"
+                            android:text="@string/movie_title"
+                            android:textColor="@color/colorTextWhite"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/rv_home"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+                    </LinearLayout>
+                </ScrollView>
+            </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
     </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
